--- a/index.ipynb
+++ b/index.ipynb
@@ -82,6 +82,7 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    a = term[0] * term[1]\n",
+    "    b = ter\n",
     "    pass"
    ]
   },
