--- a/index.ipynb
+++ b/index.ipynb
@@ -83,6 +83,7 @@
     "def find_term_derivative(term):\n",
     "    a = term[0] * term[1]\n",
     "    b = term[1] - 1\n",
+    "    tuple = ()\n",
     "    return tuple(a,b)\n",
     "    pass"
    ]
