--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(mao)\n",
+    "    return list(map(lambda term:))\n",
     "    pass"
    ]
   },
