--- a/index.ipynb
+++ b/index.ipynb
@@ -151,12 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(map(lambda term: find_term_derivatives(term), function_terms))\n",
+    "    return list(map(lambda term: find_term_derivative(term), function_terms))\n",
     "    pass"
    ]
   },
