--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(map(lambda term: find_term_derivative(term) if term[1] > 1, function_terms))\n",
+    "    return list(map(lambda term: find_term_derivative(term), function_terms))\n",
     "    pass"
    ]
   },
