--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(map(lambda term: find_term_derivative(term), function_terms))\n",
+    "    derivilist(map(lambda term: find_term_derivative(term), function_terms))\n",
     "    pass"
    ]
   },
