--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivilist(map(lambda term: find_term_derivative(term), function_terms))\n",
+    "    derivative = list(map(lambda term: find_term_derivative(term), function_terms))\n",
+    "    return \n",
     "    pass"
    ]
   },
