--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative = list(map(lambda term: find_term_derivative(term), function_terms))\n",
-    "    return list(filter(lambda term: ))\n",
+    "    return list(filter(lambda term: term[1] != 0,))\n",
     "    pass"
    ]
   },
