Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,28 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative = list(map(lambda term: find_term_derivative(term), function_terms))\n",
-    "    return list(filter(lambda term: term[1] != 0,))\n",
+    "    return list(filter(lambda term: term[1] != 0, derivative))\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0)]"
+       "[(12, 2)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
