--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    returns list(map(lambda term:))\n",
+    "    returns list(map(lambda term: output_at()))\n",
     "    pass"
    ]
   },
