--- a/index.ipynb
+++ b/index.ipynb
@@ -219,9 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-67712e658f1e>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-67712e658f1e>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    returns list(map(lambda term: output_at(term, x), terms))\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Feel free to use the output_at function in solving this\n",
     "\n",
